--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     hibernate:
       ddl-auto: update
 authentication:
-  secret-key: ${{ SECRET_KEY_brnwon_fox90_&&}}
+  secret-key: ${{ SECRET_KEY_brnwon_*&$#-good}}
   access-token:
     expiration-in-seconds: 18800
   refresh-token:
